<resources>
    <string name="app_name">HambugueriaZ</string>
    <string name="logoHamburgueriaZ"></string>
    <string name="facaSeuPedido">Faça seu pedido!</string>
    <string name="seuNome">Insira seu nome</string>
    <string name="bacon">Bacon - R$2,00</string>
    <string name="onionRings">Onion Rings - R$3,00</string>
    <string name="queijo">Queijo - R$2,00</string>
    <string name="quantidade">Quantidade:</string>
    <string name="quantidadePedido">0</string>
    <string name="botaoSomar">+</string>
    <string name="botaoSubtrair">-</string>
    <string name="resumoPedido">Resumo do pedido:</string>
    <string name="resumo">R$ 0,00</string>
    <string name="fazerPedido">Fazer Pedido</string>
</resources>